Fix tests. Fix basket views and serializers
