# backend/swagger.yaml
@@ -10,7 +10,7 @@ paths:
     get:
       summary: Get list of characteristics
       tags:
-        - Goods
+        - goods
       parameters:
         - name: search
           in: query
@@ -28,7 +28,7 @@ paths:
     get:
       summary: Get list of categories
       tags:
-        - Goods
+        - goods
       parameters:
         - name: search
           in: query
@@ -46,7 +46,7 @@ paths:
     get:
       summary: Get list of manufacturers
       tags:
-        - Goods
+        - goods
       parameters:
         - name: search
           in: query
@@ -64,7 +64,7 @@ paths:
     get:
       summary: Get list of sub categories
       tags:
-        - Goods
+        - goods
       responses:
         '200':
           description: Succesful response
@@ -76,7 +76,7 @@ paths:
     post:
       summary: Get list of sub categories
       tags:
-        - Goods
+        - goods
       requestBody:
         required: true
         content:
@@ -94,7 +94,7 @@ paths:
     get:
       summary: Get list of items
       tags:
-        - Goods
+        - goods
       parameters:
         - name: search
           in: query
@@ -139,14 +139,14 @@ paths:
     get:
       summary: Get item by id
       tags:
-        - Goods
+        - goods
       parameters:
         - name: pk
           in: path
           required: true
           description: Item id
           schema:
-            type: string
+            type: integer
       responses:
         '200':
           description: Succesful response
@@ -158,14 +158,14 @@ paths:
     patch:
       summary: Mark item as inactive
       tags:
-        - Goods
+        - goods
       parameters:
         - name: pk
           in: path
           required: true
           description: Item id
           schema:
-            type: string
+            type: integer
       responses:
         '200':
           description: Succesful response
@@ -177,7 +177,7 @@ paths:
     post:
       summary: Create pdf file of selected items in basket
       tags:
-        - Goods
+        - goods
       requestBody:
         required: true
         content:
@@ -193,7 +193,7 @@ paths:
     post:
       summary: Create item
       tags:
-        - Goods
+        - goods
       requestBody:
         required: true
         content:
@@ -211,7 +211,7 @@ paths:
     patch:
       summary: Update item
       tags:
-        - Goods
+        - goods
       requestBody:
         required: true
         content:
@@ -229,7 +229,7 @@ paths:
       get:
         summary: Get list of addresses
         tags:
-          - Orders
+          - orders
         parameters:
         - name: search
           in: query
@@ -247,7 +247,7 @@ paths:
       get:
         summary: Get list of orders
         tags:
-          - Orders
+          - orders
         parameters:
         - name: search
           in: query
@@ -266,14 +266,14 @@ paths:
     get:
       summary: Get order by id
       tags:
-        - Orders
+        - orders
       parameters:
         - name: pk
           in: path
           required: true
           description: Order id
           schema:
-            type: string
+            type: integer
       responses:
         '200':
           description: Succesful response
@@ -285,14 +285,14 @@ paths:
     patch:
       summary: Mark order as canceled
       tags:
-        - Orders
+        - orders
       parameters:
         - name: pk
           in: path
           required: true
           description: Order id
           schema:
-            type: string
+            type: integer
       responses:
         '200':
           description: Succesful response
@@ -304,14 +304,14 @@ paths:
     patch:
       summary: Update order
       tags:
-        - Orders
+        - orders
       parameters:
         - name: pk
           in: path
           required: true
           description: Order id
           schema:
-            type: string
+            type: integer
       requestBody:
         required: true
         content:
@@ -329,7 +329,7 @@ paths:
     post:
       summary: Create order
       tags:
-        - Orders
+        - orders
       requestBody:
         required: true
         content:
@@ -343,6 +343,243 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/CreateOrderResponse"
+  /users:
+      get:
+        summary: Get list of users
+        tags:
+          - users
+        parameters:
+        - name: search
+          in: query
+          description: User first_name or last_name
+          schema:
+            type: string
+        responses:
+          '200':
+            description: Succesful response
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Users"
+      post:
+        summary: Get list of users
+        tags:
+          - users
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/CreateUserRequest"
+        responses:
+          '201':
+            description: Succesful response
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/CreateUserResponse"
+  /users/me:
+    get:
+      summary: Update current user
+      tags:
+        - users
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+    patch:
+      summary: Get current user
+      tags:
+        - users
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+  /users/activation:
+    post:
+      summary: Send activation message to user email
+      tags:
+        - users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserActivation"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserActivation"
+  /users/resend_activation:
+    post:
+      summary: Resend activation message to user email
+      tags:
+        - users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserEmail"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserEmail"
+  /users/reset_password:
+    post:
+      summary: Send reset password message to user email
+      tags:
+        - users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserEmail"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserEmail"
+  /users/reset_password_confirm:
+    post:
+      summary: Send reset password message to user email
+      tags:
+        - users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserResetPasswordConfirm"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResetPasswordConfirm"
+  /auth/login:
+    post:
+      summary: Login to account
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthLogin"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token"
+  /users/refresh:
+    post:
+      summary: Relogin to account
+      tags:
+        - auth
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthRefresh"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Token"
+  /basket:
+    get:
+      summary: Get list of items in basket
+      tags:
+        - basket
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Basket"
+  /basket/add:
+    post:
+      summary: Add item in basket
+      tags:
+        - basket
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ItemBasketAdd"
+      responses:
+        '201':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ItemBasketAdd"
+  /basket/{pk}/update:
+    patch:
+      summary: Update item in basket
+      tags:
+        - orders
+      parameters:
+        - name: pk
+          in: path
+          required: true
+          description: Item id
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ItemBasketUpdate"
+      responses:
+        '200':
+          description: Succesful response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ItemBasketUpdate"
+  /basket/{pk}/delete:
+    delete:
+      summary: Delete item in basket
+      tags:
+        - orders
+      parameters:
+        - name: pk
+          in: path
+          required: true
+          description: Item id
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: Succesful response
+
 components:
   schemas:
     Manufacturer:
@@ -681,36 +918,31 @@ components:
           nullable: false
     User:
       type: object
-      required:
-        - first_name
-        - last_name
-        - phone
-        - email
       properties:
         id:
           type: integer
           example: 1
+        email:
+          type: string
+          example: email@mail.ru
         first_name:
           type: string
           example: first_name
-          maximum: 30
-          nullable: false
         last_name:
           type: string
-          example: first_name
-          maximum: 30
-          nullable: false
+          example: last_name
         phone:
           type: string
-          example: 89876543210
-          nullable: false
+          example: +79991234567
         role:
           type: string
           enum: [user, admin]
-        email:
+        is_active:
+          type: boolean
+          example: true
+        last_login:
           type: string
-          example: example@mail.ru
-          uniqueItems: true
+          example: 2023-01-01T00:00:00.000000Z
     OrderItem:
       type: object
       required:
@@ -871,6 +1103,140 @@ components:
         updated:
           type: string
           example: 2023-01-01T00:00:00.000000Z
+    CreateUserRequest:
+      type: object
+      required:
+        - email
+        - first_name
+        - last_name
+        - phone
+        - password
+        - password_repeat
+      properties:
+        email:
+          type: string
+          example: email@mail.ru
+        first_name:
+          type: string
+          example: first_name
+        last_name:
+          type: string
+          example: last_name
+        phone:
+          type: string
+          example: +79991234567
+        password:
+          type: string
+          example: password
+        password_repeat:
+          type: string
+          example: password
+    CreateUserResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        email:
+          type: string
+          example: email@mail.ru
+        first_name:
+          type: string
+          example: first_name
+        last_name:
+          type: string
+          example: last_name
+        phone:
+          type: string
+          example: +79991234567
+    UserActivation:
+      type: object
+      properties:
+        uid:
+          type: string
+        token:
+          type: string
+    UserEmail:
+      type: object
+      properties:
+        email:
+          type: string
+    UserResetPasswordConfirm:
+      type: object
+      properties:
+        uid:
+          type: string
+        token:
+          type: string
+        new_password:
+          type: string
+    AuthLogin:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    AuthRefresh:
+      type: object
+      properties:
+        refresh:
+          type: string
+    Token:
+      type: object
+      properties:
+        access:
+          type: string
+        refresh:
+          type: string
+    ItemBasket:
+      type: object
+      properties:
+        item:
+          type: object
+          properties:
+            id:
+              type: integer
+              example: 1
+            category:
+              type: string
+              example: category
+            manufacturer:
+              type: string
+              example: manufacturer
+            name:
+              type: string
+              example: name
+            price:
+              type: integer
+              example: 1000
+            image:
+              type: string
+              example: image
+            is_active:
+              type: boolean
+              example: true
+    ItemBasketAdd:
+      type: object
+      properties:
+        item:
+          type: object
+          properties:
+            item:
+              type: integer
+              example: 1
+            amount:
+              type: integer
+              example: 1
+    ItemBasketUpdate:
+      type: object
+      properties:
+        item:
+          type: object
+          properties:
+            amount:
+              type: integer
+              example: 1
     Manufacturers:
       type: array
       items:
@@ -896,9 +1262,25 @@ components:
       items:
         $ref: "#/components/schemas/PDFItem"
     Goods:
-      type: array
-      items:
-        $ref: "#/components/schemas/Item"
+      type: object
+      properties:
+        links:
+          type: object
+          properties:
+            next:
+              type: string
+            previous:
+              type: string
+        count:
+          type: integer
+        total_pages:
+          type: integer
+        current_page:
+          type: integer
+        results:
+          type: array
+          items:
+            $ref: "#/components/schemas/Item"
     Addresses:
       type: array
       items:
@@ -908,9 +1290,50 @@ components:
       items:
         $ref: "#/components/schemas/OrderItem"
     Orders:
+      type: object
+      properties:
+        links:
+          type: object
+          properties:
+            next:
+              type: string
+            previous:
+              type: string
+        count:
+          type: integer
+        total_pages:
+          type: integer
+        current_page:
+          type: integer
+        results:
+          type: array
+          items:
+            $ref: "#/components/schemas/Order"
+    Users:
+      type: object
+      properties:
+        links:
+          type: object
+          properties:
+            next:
+              type: string
+            previous:
+              type: string
+        count:
+          type: integer
+        total_pages:
+          type: integer
+        current_page:
+          type: integer
+        results:
+          type: array
+          items:
+            $ref: "#/components/schemas/User"
+    Basket:
       type: array
       items:
-        $ref: "#/components/schemas/Order"
+        $ref: "#/components/schemas/ItemBasket"
+
 
 
 
